added search to mobile main.html

--- a/ngblog/app/views/mobile/main.html
+++ b/ngblog/app/views/mobile/main.html
@@ -13,7 +13,7 @@
   </div>
   <div class="mobile-search">
     <div>
-      <input type="text" placeholder="SEACH" ng-model="$parent.keyword" ng-enter="search()">
+      <input type="text" placeholder="SEACH" ng-model="keyword" ng-enter="mobilesearch()">
       <a ng-href="/?keyword={{keyword}}"><img src="/images/search-ico.png"></a>
     </div>
   </div>
