--- a/ngblog/app/styles/main.scss
+++ b/ngblog/app/styles/main.scss
@@ -1069,3 +1069,10 @@ hr {
 .load-pic img {
   width: 70px;
 }
+
+.mobile-search-msgs {
+  margin-top: 30px;
+  margin-left: 10px;
+  font-size: 20px;
+  color: #2e5b4d;
+}
