--- a/ngblog/app/views/mobile/mobile-head.html
+++ b/ngblog/app/views/mobile/mobile-head.html
@@ -1,5 +1,5 @@
 <div class="mobile-main-head">
-  <img class="mobile-logo" src="/images/logo.png"></img>
+  <a ng-href="/"><img class="mobile-logo" src="/images/logo.png"></img></a>
   <div class="mobile-drop">
     <div class="btn-group" dropdown is-open="status.isopen">
       <button type="button" class="btn dropdown-toggle" dropdown-toggle >
