--- a/ngblog/app/styles/main.scss
+++ b/ngblog/app/styles/main.scss
@@ -509,6 +509,10 @@ show_post.html
   min-height: 225px;
 }
 
+.post-content img {
+  width: 100%;
+}
+
 .show-posts-box .post-picture .image {
   width: 100%;
   height: 100%;
