--- a/ngblog/app/views/admin_new_post.html
+++ b/ngblog/app/views/admin_new_post.html
@@ -142,13 +142,13 @@
           <div collapse="isCollapsed">
             <div>
               <label class="checkbox-inline">
-                <input type="checkbox" ng-model="post.is_recommend" value=""> 推荐
+                <input type="checkbox" ng-model="post.is_recommend" value=""> 是否推荐
               </label>
               <label class="checkbox-inline">
-                <input type="checkbox" ng-model="post.can_comment" value=""> 允许评论
+                <input type="checkbox" ng-model="post.can_comment" value=""> 是否允许评论
               </label>
               <label class="checkbox-inline">
-                <input type="checkbox" ng-model="post.is_published" value=""> 推荐
+                <input type="checkbox" ng-model="post.is_published" value=""> 是否推荐
               </label>
             </div>
           </div>
