--- a/ngblog/app/views/update_password.html
+++ b/ngblog/app/views/update_password.html
@@ -33,7 +33,7 @@
 <div class="col-md-11 right-side right-box" style="margin-top: 50px;">
   <form class="form-horizontal col-md-12" ng-submit="updatePassword(user.id)">
     <div class="form-group　upload-image">
-      <label for="password" class="col-md-1 control-label">密码：</label>
+      <label for="password" class="col-md-1 control-label">新密码：</label>
       <div class="col-md-11">
         <input type="text" class="form-control" ng-model="user.password" id="name" required>
       </div>
