--- a/ngblog/app/styles/main.scss
+++ b/ngblog/app/styles/main.scss
@@ -391,6 +391,10 @@ a:hover,a:focus {
   width: 60%;
 }
 
+.posts-box .post-inf img {
+  width: 90%;
+}
+
 .posts-box .post-picture {
   float: left;
   height: 100%;
@@ -496,6 +500,7 @@ show_post.html
   margin: 0 auto;
 
 }
+
 
 .show-posts-box .post-picture {
   width: 50%;
@@ -1051,6 +1056,10 @@ ul, li {
 .mobile-post-content {
   max-height: 100px;
   overflow: hidden;
+}
+
+.mobile-post-content p img {
+  width: 100%;
 }
 
 .mobile-post-time {
