--- a/public/views/header.html
+++ b/public/views/header.html
@@ -1,1 +1,17 @@
-<div class="posts-head hidden-xs"> <div class="posts-logo"> <a href="/#/"><img src="images/logo.c0dc83c6.png"></a> </div> <div class="posts-blog"> <a ng-href="/#/posts">BLOG</a> </div> <div class="posts-photo"> <a>PHOTO</a> </div> <div class="posts-search"> <div> <input type="text" placeholder="SEACH" ng-model="$parent.keyword" ng-enter="search()"> <a ng-href="/#/search/posts?keyword={{keyword}}"><img src="/images/search-ico.a4973c43.png"></a> </div> </div> </div>
+<div class="posts-head hidden-xs">
+  <div class="posts-logo">
+    <a href="/#/"><img src="images/logo.png"></a>
+  </div>
+  <div class="posts-blog">
+    <a ng-href="/#/posts">BLOG</a>
+  </div>
+  <div class="posts-photo">
+    <a>PHOTO</a>
+  </div>
+  <div class="posts-search">
+    <div>
+      <input type="text" placeholder="SEACH" ng-model="$parent.keyword" ng-enter="search()">
+      <a ng-href="/#/search/posts?keyword={{keyword}}"><img src="/images/search-ico.png"></a>
+    </div>
+  </div>
+</div>
