--- a/public/views/admin_new_user.html
+++ b/public/views/admin_new_user.html
@@ -1,4 +1,5 @@
-<style type="text/css">.form-horizontal  {
+<style type="text/css">
+  .form-horizontal  {
     margin-top: 50px;
   }
   .pre-image {
@@ -26,4 +27,44 @@
     background: #66afe9;
     color: #ffffff;
     font-size: 24px;
-  }</style> <navmenu></navmenu> <breadcrumbs></breadcrumbs> <div class="col-md-11 right-side right-box"> <form class="form-horizontal col-md-12" ng-submit="addUser()"> <div class="form-group"> <label for="name" class="col-md-1 control-label">用户名：</label> <div class="col-md-11"> <input type="text" class="form-control" ng-model="user.name" id="name" required> </div> </div> <div class="form-group"> <label for="email" class="col-md-1 control-label">邮箱：</label> <div class="col-md-11"> <input type="text" class="form-control" ng-model="user.email" id="email" required> </div> </div> <div class="form-group"> <label for="password" class="col-md-1 control-label">密码：</label> <div class="col-md-11"> <input type="text" class="form-control" ng-model="user.password" id="password" required> </div> </div> <div class="form-group upload-image"> <label for="avatar" class="col-md-1 control-label">头像：</label> <div class="col-md-11"> <input type="file" nv-file-select uploader="uploader"><br> <div class="pre-image"> <p>预览</p> <p><img ng-src="{{user.avatar}}" alt="请上传图片"></p> </div> </div> </div> <div class="btn-group"> <div class="btn-box"> <button type="submit" class="btn btn-lg btn-save">提交</button> </div> </div> </form> </div>
+  }
+</style>
+<navmenu></navmenu>
+<breadcrumbs></breadcrumbs>
+<div class="col-md-11 right-side right-box">
+  <form class="form-horizontal col-md-12" ng-submit="addUser()">
+    <div class="form-group">
+      <label for="name" class="col-md-1 control-label">用户名：</label>
+      <div class="col-md-11">
+        <input type="text" class="form-control" ng-model="user.name" id="name" required>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="email" class="col-md-1 control-label">邮箱：</label>
+      <div class="col-md-11">
+        <input type="text" class="form-control" ng-model="user.email" id="email" required>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="password" class="col-md-1 control-label">密码：</label>
+      <div class="col-md-11">
+        <input type="text" class="form-control" ng-model="user.password" id="password" required>
+      </div>
+    </div>
+    <div class="form-group upload-image">
+      <label for="avatar" class="col-md-1 control-label">头像：</label>
+      <div class="col-md-11">
+        <input type="file" nv-file-select uploader="uploader"/><br/>
+        <div class="pre-image">
+          <p>预览</p>
+          <p><img ng-src="{{user.avatar}}" alt="请上传图片" /></p>
+        </div>
+      </div>
+    </div>
+    <div class="btn-group">
+      <div class="btn-box">
+        <button type="submit" class="btn btn-lg btn-save">提交</button>
+      </div>
+    </div>
+  </form>
+</div>
