--- a/public/views/mobile/main.html
+++ b/public/views/mobile/main.html
@@ -1,25 +1,1 @@
-<ng-include src="'views/mobile/mobile-head.html'"></ng-include>
-<div ng-show=messageMark class="mobile-main-posts" infinite-scroll='loadMore()' infinite-scroll-disabled='busy' infinite-scroll-distance='1'>
-  <div class="mobile-main-post" ng-repeat="p in mobileposts">
-    <a ng-href="/posts/{{p.id}}">
-      <div class="mobile-post-title">
-        <span>{{p.title}}</span>
-      </div>
-      <div class="mobile-post-content">
-        <p ng-bind-html="p.content" ng-if="p.markdown == null || p.markdown == ''"></p>
-        <p ng-bind-html="markdown(p.markdown)" ng-if="p.content == null || p.content == ''"></p>
-      </div>
-      <div class="mobile-post-time">
-        <span>{{p.publish_time.substr(0,10)}}</span>
-        <img src="/images/post-ico.png">
-      </div>
-    </a>
-    <hr>
-  </div>
-</div>
-<div class="mobile-search-msgs" ng-hide=messageMark>
-  <span>没有搜索到相关文章</span>
-</div>
-<div class="load-pic ng-hide" ng-show="loadMark">
-  <img src="/images/loading.gif">
-</div>
+<ng-include src="'views/mobile/mobile-head.html'"></ng-include> <div ng-show="messageMark" class="mobile-main-posts" infinite-scroll="loadMore()" infinite-scroll-disabled="busy" infinite-scroll-distance="1"> <div class="mobile-main-post" ng-repeat="p in mobileposts"> <a ng-href="/posts/{{p.id}}"> <div class="mobile-post-title"> <span>{{p.title}}</span> </div> <div class="mobile-post-content"> <p ng-bind-html="p.content" ng-if="p.markdown == null || p.markdown == ''"></p> <p ng-bind-html="markdown(p.markdown)" ng-if="p.content == null || p.content == ''"></p> </div> <div class="mobile-post-time"> <span>{{p.publish_time.substr(0,10)}}</span> <img src="/images/post-ico.png"> </div> </a> <hr> </div> </div> <div class="mobile-search-msgs" ng-hide="messageMark"> <span>没有搜索到相关文章</span> </div> <div class="load-pic ng-hide" ng-show="loadMark"> <img src="/images/loading.gif"> </div>
