--- a/public/views/mobile/mobile-head.html
+++ b/public/views/mobile/mobile-head.html
@@ -1,20 +1,1 @@
-<div class="mobile-main-head">
-  <a ng-href="/"><img class="mobile-logo" src="/images/logo.png"></img></a>
-  <div class="mobile-drop">
-    <div class="btn-group" dropdown is-open="status.isopen">
-      <button type="button" class="btn dropdown-toggle" dropdown-toggle >
-        <span class="glyphicon glyphicon-menu-hamburger"></span>
-      </button>
-      <ul class="dropdown-menu" role="menu">
-        <li><a ng-href="/">BLOG</a></li>
-        <li><a href="#">PHOTO</a></li>
-      </ul>
-    </div>
-  </div>
-  <div class="mobile-search">
-    <div>
-      <input type="text" placeholder="SEACH" ng-model="$parent.keyword" ng-enter="mobilesearch()">
-      <a ng-href="/?keyword={{keyword}}"><img src="/images/search-ico.png"></a>
-    </div>
-  </div>
-</div>
+<div class="mobile-main-head"> <a ng-href="/"><img class="mobile-logo" src="/images/logo.png"></a> <div class="mobile-drop"> <div class="btn-group" dropdown is-open="status.isopen"> <button type="button" class="btn dropdown-toggle" dropdown-toggle> <span class="glyphicon glyphicon-menu-hamburger"></span> </button> <ul class="dropdown-menu" role="menu"> <li><a ng-href="/">BLOG</a></li> <li><a href="#">PHOTO</a></li> </ul> </div> </div> <div class="mobile-search"> <div> <input type="text" placeholder="SEACH" ng-model="$parent.keyword" ng-enter="mobilesearch()"> <a ng-href="/?keyword={{keyword}}"><img src="/images/search-ico.png"></a> </div> </div> </div>
