--- a/public/views/admin_new_post.html
+++ b/public/views/admin_new_post.html
@@ -1,5 +1,4 @@
-<style>
-#markdown {
+<style>#markdown {
   min-height: 500px;
   position: relative;
   width: 100%;
@@ -73,101 +72,4 @@
   background: #66afe9;
   color: #ffffff;
   font-size: 24px;
-}
-</style>
-<navmenu></navmenu>
-<breadcrumbs></breadcrumbs>
-  <div class="col-md-11 right-side right-box">
-    <form ng-submit="addPost()" class="form-horizontal col-md-12 add-article">
-      <div class="form-group">
-        <label for="title" class="col-md-1 control-label">标题</label>
-        <div class="col-md-11">
-          <input type="text" ng-model="post.title" class="form-control" required>
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="author" class="col-md-1 control-label">作者</label>
-        <div class="col-md-11">
-          <input type="text" ng-model="post.author" class="form-control" required>
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="summary" class="col-md-1 control-label">摘要</label>
-        <div class="col-md-11">
-          <textarea ng-model="post.summary" rows="6" class="form-control" required></textarea>
-        </div>
-      </div>
-      <div class="form-group upload-image">
-        <label for="img" class="col-md-1 control-label">图片</label>
-        <div class="col-md-11">
-          <input type="file" nv-file-select uploader="uploader"/><br/>
-          <div class="pre-image">
-            <p>预览</p>
-            <p><img ng-src="{{post.img}}" alt="请上传图片" /></p>
-          </div>
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="content" class="col-md-1 control-label">内容</label>
-        <div class="col-md-11 editor">
-          <tabset justified="true">
-            <tab heading="富文本编辑器">
-              <textarea ng-model="post.content" ueditor></textarea>
-            </tab>
-            <tab heading="markdown语法">
-              <div nclass="form-control" id="markdown">
-                <div id="editor-tool-bar">
-                  <span><a class="m-pill" href="http://wowubuntu.com/markdown/" target="_blank">语法参考</a></span>
-                  <span><a class="m-pill" href="javascript:void(0);">上传图片</a></span>
-                </div>
-                <div id="editor" ace ng-model="post.markdown"></div>
-                <div id="result" ng-bind-html="markdown(post.markdown)"></div>
-              </div>
-            </tab>
-          </tabset>
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="content" class="col-md-1 control-label">标签</label>
-        <div class="col-md-11 tags">
-          <tags-input ng-model="post.tags">
-            <!--<auto-complete source="loadTags($query)"></auto-complete>-->
-          </tags-input>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="col-md-11 col-md-offset-1">
-          <label ng-click="isCollapsed = !isCollapsed">
-            <span ng-class="{true: 'glyphicon glyphicon-chevron-down', false: 'glyphicon glyphicon-chevron-up'}[isCollapsed]"></span> 高级设置</label>
-          <div collapse="isCollapsed">
-            <div>
-              <label class="checkbox-inline">
-                <input type="checkbox" ng-model="post.is_recommend" value=""> 是否推荐
-              </label>
-              <label class="checkbox-inline">
-                <input type="checkbox" ng-model="post.can_comment" value=""> 是否允许评论
-              </label>
-              <label class="checkbox-inline">
-                <input type="checkbox" ng-model="post.is_published" value=""> 是否推荐
-              </label>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="btn-group">
-        <div class="btn-box">
-          <button type="submit" class="btn btn-lg btn-save">提交</button>
-        </div>
-      </div>
-    </form>
-  </div>
-
-
-<script src="/vendor/ueditor/ueditor.config.js"></script>
-<script src="/vendor/ueditor/ueditor.all.js"></script>
-
-<script src="/vendor/ace/src/ace.js"></script>
-<script src="/vendor/marked.js"></script>
-<link rel="stylesheet" href="/vendor/highlight/styles/default.css">
-<script src="/vendor/highlight/highlight.pack.js"></script>
-<script>hljs.initHighlightingOnLoad();</script>
+}</style> <navmenu></navmenu> <breadcrumbs></breadcrumbs> <div class="col-md-11 right-side right-box"> <form ng-submit="addPost()" class="form-horizontal col-md-12 add-article"> <div class="form-group"> <label for="title" class="col-md-1 control-label">标题</label> <div class="col-md-11"> <input type="text" ng-model="post.title" class="form-control" required> </div> </div> <div class="form-group"> <label for="author" class="col-md-1 control-label">作者</label> <div class="col-md-11"> <input type="text" ng-model="post.author" class="form-control" required> </div> </div> <div class="form-group"> <label for="summary" class="col-md-1 control-label">摘要</label> <div class="col-md-11"> <textarea ng-model="post.summary" rows="6" class="form-control" required></textarea> </div> </div> <div class="form-group upload-image"> <label for="img" class="col-md-1 control-label">图片</label> <div class="col-md-11"> <input type="file" nv-file-select uploader="uploader"><br> <div class="pre-image"> <p>预览</p> <p><img ng-src="{{post.img}}" alt="请上传图片"></p> </div> </div> </div> <div class="form-group"> <label for="content" class="col-md-1 control-label">内容</label> <div class="col-md-11 editor"> <tabset justified="true"> <tab heading="富文本编辑器"> <textarea ng-model="post.content" ueditor></textarea> </tab> <tab heading="markdown语法"> <div nclass="form-control" id="markdown"> <div id="editor-tool-bar"> <span><a class="m-pill" href="http://wowubuntu.com/markdown/" target="_blank">语法参考</a></span> <span><a class="m-pill" href="javascript:void(0);">上传图片</a></span> </div> <div id="editor" ace ng-model="post.markdown"></div> <div id="result" ng-bind-html="markdown(post.markdown)"></div> </div> </tab> </tabset> </div> </div> <div class="form-group"> <label for="content" class="col-md-1 control-label">标签</label> <div class="col-md-11 tags"> <tags-input ng-model="post.tags"> <!--<auto-complete source="loadTags($query)"></auto-complete>--> </tags-input> </div> </div> <div class="form-group"> <div class="col-md-11 col-md-offset-1"> <label ng-click="isCollapsed = !isCollapsed"> <span ng-class="{true: 'glyphicon glyphicon-chevron-down', false: 'glyphicon glyphicon-chevron-up'}[isCollapsed]"></span> 高级设置</label> <div collapse="isCollapsed"> <div> <label class="checkbox-inline"> <input type="checkbox" ng-model="post.is_recommend" value=""> 是否推荐 </label> <label class="checkbox-inline"> <input type="checkbox" ng-model="post.can_comment" value=""> 是否允许评论 </label> <label class="checkbox-inline"> <input type="checkbox" ng-model="post.is_published" value=""> 是否推荐 </label> </div> </div> </div> </div> <div class="btn-group"> <div class="btn-box"> <button type="submit" class="btn btn-lg btn-save">提交</button> </div> </div> </form> </div> <script src="/vendor/ueditor/ueditor.config.js"></script> <script src="/vendor/ueditor/ueditor.all.js"></script> <script src="/vendor/ace/src/ace.js"></script> <script src="/vendor/marked.js"></script> <link rel="stylesheet" href="/vendor/highlight/styles/default.css"> <script src="/vendor/highlight/highlight.pack.js"></script> <script>hljs.initHighlightingOnLoad();</script>
