--- a/public/views/directives/breadcrumbs.html
+++ b/public/views/directives/breadcrumbs.html
@@ -1,10 +1,1 @@
-
-<div class="col-md-11 right-side right-box">
-  <div class="well well-sm">
-    <ol class="breadcrumb">
-      <li class="pull-left" ng-repeat="bc in crumbs">
-        <a href="{{bc.anchor}}">{{bc.menu}}</a>
-      </li>
-    </ol>
-  </div>
-</div>
+<div class="col-md-11 right-side right-box"> <div class="well well-sm"> <ol class="breadcrumb"> <li class="pull-left" ng-repeat="bc in crumbs"> <a href="{{bc.anchor}}">{{bc.menu}}</a> </li> </ol> </div> </div>
